Fixed navbar text wrapping in desktop mode

--- a/insurance-project/assets/css/index.css
+++ b/insurance-project/assets/css/index.css
@@ -56,7 +56,7 @@ header nav ul {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: bolder;
 }
 
@@ -65,6 +65,7 @@ header nav ul li {
   padding: 30px 30px;
   box-sizing: border-box;
   text-align: center;
+  white-space: nowrap;
 }
 
 header nav ul li:hover,
@@ -147,7 +148,8 @@ header nav ul li a._current {
 
 .boxLg {
   width: 100%;
-  height: 250px;
+  height: 100%;
+  padding-block: 5%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -361,5 +363,8 @@ footer a:visited {
 @media (min-width: 767px) {
   header nav ul li {
     flex: 1 1 0;
+    padding-inline: 120px;
+    overflow: visible;
+    text-overflow: initial;
   }
 }
